Fix nav spacing

--- a/lesson03/styles/medium.css
+++ b/lesson03/styles/medium.css
@@ -7,8 +7,8 @@
 	/* Grid *********************/
    	nav ul {
 		display: grid;
-		/*grid-template-columns: repeat(5, 1fr); */
-		grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+		grid-template-columns: repeat(4, 1fr);
+		/* grid-template-columns: repeat(auto-fill, minmax(140px, 1fr)); */
 	}
 
 	nav a {
